--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -28,6 +28,7 @@
             <a href="{% url "logout" %}" >Wyloguj</a>
         {% else %}
             <a href="{% url "login" %}">Zaloguj</a>
+            <a href="{% url "register" %}">Nowe konto</a>
         {% endif %}
     </span>
   </div>
