--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -23,6 +23,7 @@
     <span class="user">
         {% if request.user.is_authenticated %}
             Witaj, {{ request.user.first_name }}!
+            <a href="{% url "edit" %}" >Edytuj profil</a>
             <a href="{% url "password_change" %}" >Zmień hasło</a>
             <a href="{% url "password_reset" %}" >Resetuj hasło</a>
             <a href="{% url "logout" %}" >Wyloguj</a>
