Email authentication, popup messages

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>Panel główny</h1>
-    <p> Witaj w panelu głównym.</p>
+    <p> Witaj w panelu głównym.Możesz zresetwac swoje<a href="{% url "password_change" %}" >hasło</a> oraz<a href="{% url "edit" %}" >edytowac</a> profil.</p>
 
 {% endblock %}
 
