--- a/account/static/css/base.css
+++ b/account/static/css/base.css
@@ -13,7 +13,6 @@ p {
 a {
     color:#12c064;
     text-decoration:none;
-    padding:0 0 10px 10px;
 }
 
 a:hover {
@@ -183,8 +182,7 @@ ul.messages li a.close {
     margin:0 0 10px 0;
 }
 .social li a {
-    width:100%;
-    height:100%;
+    text-align:center;
     display:block;
     color:#fff;
 }
