add bookmarklet image scrapper, add thumbnail app, image-details page

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -4,7 +4,15 @@
 
 {% block content %}
     <h1>Panel główny</h1>
-    <p> Witaj w panelu głównym.Możesz zresetwac swoje<a href="{% url "password_change" %}" >hasło</a> oraz<a href="{% url "edit" %}" >edytowac</a> profil.</p>
+    {% with total_images_created=request.user.images_created.count %}
+    <p> Witaj w panelu głównym. Dodałeś {{ total_images_created }} obraz{{ total_images_created|pluralize:"ów" }}</p>
+    {% endwith %}
+
+    <p>Przeciągnij poniższy przycisk na pasek ulubionych. Zyskasz mozliwosc dodawania obrazow z innych witryn internetowych
+    <a href="javascript:{% include "bookmarklet_launcher.js" %}" class="button">Dodaj obraz</a>
+    </p>
+
+    <p>Możesz zresetwac swoje<a href="{% url "password_change" %}" > hasło</a> oraz<a href="{% url "edit" %}" > edytowac</a> profil.</p>
 
 {% endblock %}
 
