--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -13,6 +13,11 @@
     </p>
 
     <p>Możesz zresetwac swoje<a href="{% url "password_change" %}" > hasło</a> oraz<a href="{% url "edit" %}" > edytowac</a> profil.</p>
-
+    <h2>Co nowego? </h2>
+    <div id="action-list">
+        {% for action in actions %}
+            {% include "actions/action/detail.html" %}
+        {% endfor %}
+    </div>
 {% endblock %}
 
